add inline errors for missing snips

--- a/templates/page.html
+++ b/templates/page.html
@@ -63,6 +63,13 @@
         padding-right: 5px;
         min-width: 40px;
       }
+      .error .head {
+        font-weight: bold;
+      }
+      .error {
+        background-color: #d96e6e;
+        padding: 5px;
+      }
 
       {{.Css}}
     </style>
