random cleanup and fix a bug with formatting snips

--- a/templates/page.html
+++ b/templates/page.html
@@ -43,6 +43,10 @@
         border-top-left-radius: 3px;
         border-top-right-radius: 3px;
       }
+      .mid-code > pre {
+        padding-top: 5px;
+        padding-bottom: 5px;
+      }
       .bottom-code > pre {
         padding-bottom: 10px;
         border-bottom-left-radius: 3px;
